# VideoPlayer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-debug.bat  build-release.bat  debug-no-audio-playback.md  design-system.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  prototype.html  resources.qrc
.cursor/skills/videoplayer-project-background/: SKILL.md
core/: audio_output.cpp  audio_output.h  dbg_trace.h  ffmpeg_player.cpp  ffmpeg_player.h  video_frame_queue.h
ui/: controlbar.cpp  controlbar.h  playlist_widget.cpp  playlist_widget.h  settings_dialog.cpp  settings_dialog.h  slider.cpp  slider.h  titlebar.cpp  titlebar.h  video_canvas.cpp  video_canvas.h
